fix dark mode hover

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1689,14 +1689,14 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }
 
 .pt-20 {
@@ -2143,6 +2143,16 @@ html.dark * {
 .dark .dark\:hover\:bg-waikawa-gray-950:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(38 44 64 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-waikawa-gray-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 182 221 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-waikawa-gray-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(65 78 110 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:shadow-black\/10:hover {
